fix for bug #191042. clear the custom flags for the message otherwise the old custom flags will stay around thanks to ere@atp.fi (Ere Maijala) for the fix. r/sr=sspitzer